--- a/index.html
+++ b/index.html
@@ -29,7 +29,11 @@
       <div class="storage-content">
         <p>You’ve used <span>815 GB</span> of your storage</p>
 
-        <div class="data-used"></div>
+        <div class="data-used">
+          <span class="used">
+            <span class="circle"></span>
+          </span>
+        </div>
         <div class="triangle"></div>
         
         <div class="num-gigs-container">
