--- a/index.html
+++ b/index.html
@@ -52,9 +52,6 @@
 
     </div>
 </main>
-
+<script src="index.js"></script>
 </body>
 </html>
-<!--<div class="attribution">
-  Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-  Coded by <a href="#">Your Name Here</a>.
