--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="storage">
 
       <div class="storage-content">
-        <p>You’ve used <span>815 GB</span> of your storage</p>
+        <p>You’ve used <span class="storage-used">815 GB</span> of your storage</p>
 
         <div class="data-used">
           <span class="used">
@@ -44,14 +44,11 @@
       </div>
 
       <div class="left-gigs">
-        <p>185 <span>GB Left</span></p>
+        <p class="num-left">185 <span>GB Left</span></p>
       </div>
       
     </div>
   </div>
-
-    </div>
 </main>
-<script src="index.js"></script>
 </body>
 </html>
